redux actions to logout user, added nav bar component and routes, added css to nav bar for display

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,19 @@
 .App-link {
   color: #09d3ac;
 }
+
+/* Style the navbar */
+#nav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Navbar links */
+#nav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
