--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap');
+
+html,
+body,
+#root {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,13 +27,34 @@ code {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  width: 60%;
+  margin: auto;
 }
 
 .card {
   display: flex;
   flex-direction: column;
+  border: 2px solid black;
+  text-align: center;
 }
 
 .card img {
-  width: 20%;
+  width: 100%;
+  max-height: 60%;
+}
+
+.show-item-container {
+  width: 70%;
+  margin: auto;
+  padding: 3vw;
+  text-align: justify;
+  border: 2px solid black;
+  justify-content: center;
+}
+.show-item-container h2 {
+  text-align: left justify;
+}
+
+.show-item-container img {
+  width: 100%;
 }
