--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body,
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  height: 100%;
 }
 
 
@@ -16,6 +17,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.content {
+  flex: 1 0 auto;
+  min-height: 100%;
 }
 
 code {
@@ -29,6 +38,7 @@ code {
   justify-content: center;
   width: 60%;
   margin: auto;
+  padding: 20px;
 }
 
 .card {
