--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,68 @@ body {
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
   flex: 1 0 auto;
   min-height: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  width: 100%;
+}
+
+.content form
+{
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  box-shadow: -4px 3px 10px 2px rgba(0,0,0,0.75);
+  padding: 16px 0 36px 0;
+  border-radius: 16px;
+}
+
+.content form div
+{
+  margin-bottom: 8px;
+  display: flex;
+  justify-content: center;
+}
+
+.content form div input
+{
+  border: none;
+  padding: 4px 6px;
+  border-bottom: 2px solid black;
+  transition: 0.7s;
+}
+
+.content form div input:hover
+{
+  border-bottom: 2px solid #7733ff;
+  transition: 0.7s;
+}
+
+.content form div label{
+  text-align: left;
+}
+
+.content form div div label
+{
+  text-align: left;
+}
+
+.content form input[type="submit"]
+{
+  align-self: center;
+  width: 80px;
+  border-radius: 50px;
+}
+
+.content form div label
+{
+  margin-bottom: 4px;
 }
 
 code {
@@ -72,15 +132,22 @@ code {
 .show-button {
   border: 1px solid #262626;
   margin: 3vw;
-  padding: 1vw;
+  padding: 6px 8px;
   text-decoration: none;
   color: #eeeeee;
   background-color: #262626;
   transition: 0.8s;
+  border-radius: 90px;
   /* &:hover {
     color: #262626;
     background-color: #eee;
   } */
+}
+
+.show-button:active
+{
+  transition: 0.3s;
+  background-color: #73f;
 }
 
 .cart-item img {
